# ClimbingTrainingTracker

./: .gitignore  CMakeLists.txt  README.md
include/mqtt/: mqtt.cpp
include/wifi_connectivity/: wifi.cpp  wifi.h
main/: CMakeLists.txt  Hangboard.cpp  helper.cpp  helper.h
